Feature RM#71431: [TRACKNUMBERWIZARD] 2 different wizards are needed